# fact-eval

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: factscore-llama31-8b.factscore.yaml  factscore-mini.biography.yaml  factscore-mini.factscore.yaml  factscore-mini.wildhallu.yaml  factscore-nano.biography.yaml  factscore-nano.factscore.yaml  factscore-nano.wildhallu.yaml  factscore-qwen25-32b.factscore.yaml  factscore-qwen3-32b.factscore.yaml  factscore-qwen3-8b.factscore.yaml
data/: prompts_veriscore.jsonl
data/configs/: default.yaml
data/prompts/: generation_closebook.json
fact_eval/: run_eval.py
fact_eval/customized_factscore/: extractor.py  factuality_scorer.py  search.py  verifier.py
fact_eval/customized_factscore/deprecated/: extraction_prompt.py  verification_prompt.py
fact_eval/customized_veriscore/: claim_extractor.py  claim_verifier.py  run.py  veriscore.py
fact_eval/customized_veriscore/deprecated/: get_response.py  retrieve_evidence.py  search_API.py
fact_eval/extractor/: customized_extractor.py  veriscore_extractor.py
fact_eval/scorer/: factscore.py  factstrictscore.py  veriscore.py
fact_eval/search/: dense_index_search.py  document_collection_search.py
fact_eval/utils/: async_completion.py  load_model.py
fact_eval/verifier/: customized_strict_verifier.py  customized_verifier.py  veriscore_verifier.py
tests/: test_factscore.py  test_factstrictscore.py  test_veriscore.py  test_veriscore_extractor.py  test_veriscore_verifier.py
